Add audio prediction to web interface

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
             </label>
 
             <div class="custom-file">
-              <input type='file' name='image' id='image' class='custom-file-input' required>
+              <input type='file' name='image' id='image' class='custom-file-input'>
               <label class='custom-file-label' for='image'>Seleccionar .jpg</label>
             </div>
           </div>
